grammar.txt
program -> declaration* EOF;

declaration -> classDecl | funDecl | varDecl | statement;

classDecl -> "class" IDENTIFIER ( "<" IDENTIFIER )? "{" function* "}"

funDecl -> "fun" function;

function -> IDENTIFIER "(" parameters? ")" block;

parameters -> IDENTIFIER ( "," IDENTIFIER )* ;

varDecl -> "var" IDENTIFIER ( "=" expression )? ";";

statement -> exprStmt | forStmt | ifStmt | printStmt | returnStmt | whileStmt | block;

returnStmt -> "return" expression? ";";

forStmt -> "for" "(" ( varDecl | exprStmt | ";" ) expression? ";" expression? ")" statement;

whileStmt -> "while" "(" expression ")" statement;

ifStmt -> "if" "(" expression ")" statement ("else" statement)? ;

block -> "{" declaration "}";

exprStmt -> expression ";";

printStmt -> "print" expression ";";

series -> expression

series -> expression "," series

expression -> primary | unary | binary | grouping;

assignment -> (call ".")? IDENTIFIER "=" assignment | logic_or;

logic_or -> logic_and ("or" logic_and)*;`

logic_and -> equality ("and" equality)*;

primary -> NUMBER | STRING | "true" | "false" | "nil" | "(" expression ")" | IDENTIFIER | "super" "." IDENTIFIER;

grouping -> "(" expression ")";

unary -> ("-" | "!") unary | call;

call -> primary ( "(" arguments? ")" | "." IDENTIFIER )*;

arguments -> expression ("," expression)*;

binary -> expression operator expression

operator -> "==" | "!=" | "<" | "<=" | ">" | ">=" | "+" | "-" | "*" | "/";
